Refactor: 표준 API로 반복 검증과 자원 정리 단순화